As user I can delete my working hours[#183674801]
