# routes/hoursRoutes.js
@@ -4,6 +4,10 @@ const hoursApi = require('./../controllers/hoursApi');
 
 router.route('/').post(hoursApi.createHours);
 
-router.route('/:id').get(hoursApi.getHour).patch(hoursApi.updateHours);
+router
+  .route('/:id')
+  .get(hoursApi.getHour)
+  .patch(hoursApi.updateHours)
+  .delete(hoursApi.deleteHour);
 
 module.exports = router;
